# cs124-group-project

./: .clang-format  .gitignore  .replit  REPORT.md  main.cpp  meson.build  objs.txt  shell.nix
assets/: freezer.txt  meat.txt  produce.txt  queue.txt  scratch  shelves.txt  shelves.txt.orig  store.txt
include/: buy.hpp  cart.hpp  flows.hpp  item.hpp  models.hpp  store.hpp  ui.hpp
include/structures/: list.hpp  map.hpp  queue.hpp  tree.hpp
src/: buy.cpp  cart.cpp  flows.cpp  item.cpp  store.cpp  ui.cpp
src/structures/: list.cpp  map.cpp  queue.cpp  tree.cpp
